--- a/EventLogUtility/SupportingFiles/Nib/MasterView/MasterView.xib
+++ b/EventLogUtility/SupportingFiles/Nib/MasterView/MasterView.xib
@@ -6,6 +6,8 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="MasterViewController">
             <connections>
+                <outlet property="navigateViewController" destination="n5Z-YV-Oah" id="xLv-6F-0YC"/>
+                <outlet property="presentView" destination="xws-h5-Vl2" id="IiN-IJ-4YS"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
         </customObject>
@@ -17,8 +19,52 @@
             <subviews>
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="HTJ-TO-ihN" customClass="BaseView">
                     <rect key="frame" x="0.0" y="470" width="170" height="30"/>
+                    <subviews>
+                        <button identifier="FileListController" translatesAutoresizingMaskIntoConstraints="NO" id="rep-b0-6rx">
+                            <rect key="frame" x="20" y="5" width="20" height="20"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="20" id="k0F-QV-HsS"/>
+                                <constraint firstAttribute="height" constant="20" id="sTU-r5-YD3"/>
+                            </constraints>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSActionTemplate" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="Z8e-0p-Rg1">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                            <connections>
+                                <action selector="userClickButton:" target="n5Z-YV-Oah" id="Nns-as-fT8"/>
+                            </connections>
+                        </button>
+                        <button identifier="SearchController" translatesAutoresizingMaskIntoConstraints="NO" id="i2h-RE-dPe">
+                            <rect key="frame" x="75" y="5" width="20" height="20"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="20" id="1ZU-5e-zYB"/>
+                                <constraint firstAttribute="height" constant="20" id="aF2-Rx-ezU"/>
+                            </constraints>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSAddTemplate" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="hHC-up-5QH">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                        </button>
+                        <button identifier="ResultController" translatesAutoresizingMaskIntoConstraints="NO" id="80R-n2-MnF">
+                            <rect key="frame" x="130" y="5" width="20" height="20"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="20" id="OwT-kJ-rVI"/>
+                                <constraint firstAttribute="height" constant="20" id="vhQ-Kz-Kd3"/>
+                            </constraints>
+                            <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSRemoveTemplate" imagePosition="only" alignment="center" imageScaling="proportionallyUpOrDown" inset="2" id="5kf-cY-cbX">
+                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                <font key="font" metaFont="system"/>
+                            </buttonCell>
+                        </button>
+                    </subviews>
                     <constraints>
+                        <constraint firstItem="i2h-RE-dPe" firstAttribute="leading" secondItem="rep-b0-6rx" secondAttribute="trailing" constant="35" id="2Vc-Ge-CoB"/>
+                        <constraint firstItem="80R-n2-MnF" firstAttribute="centerY" secondItem="HTJ-TO-ihN" secondAttribute="centerY" id="QxE-xT-ull"/>
                         <constraint firstAttribute="height" constant="30" id="SLq-Go-MrZ"/>
+                        <constraint firstItem="i2h-RE-dPe" firstAttribute="centerY" secondItem="HTJ-TO-ihN" secondAttribute="centerY" id="UcR-oh-jWN"/>
+                        <constraint firstItem="i2h-RE-dPe" firstAttribute="centerX" secondItem="HTJ-TO-ihN" secondAttribute="centerX" id="Y76-Lm-iz9"/>
+                        <constraint firstItem="rep-b0-6rx" firstAttribute="centerY" secondItem="HTJ-TO-ihN" secondAttribute="centerY" id="y2S-zQ-4JS"/>
+                        <constraint firstItem="80R-n2-MnF" firstAttribute="leading" secondItem="i2h-RE-dPe" secondAttribute="trailing" constant="35" id="z9Z-gJ-vlc"/>
                     </constraints>
                 </customView>
                 <customView translatesAutoresizingMaskIntoConstraints="NO" id="xws-h5-Vl2" customClass="BaseView">
@@ -35,5 +81,16 @@
                 <constraint firstItem="xws-h5-Vl2" firstAttribute="top" secondItem="HTJ-TO-ihN" secondAttribute="bottom" id="xhT-oR-zhd"/>
             </constraints>
         </customView>
+        <customObject id="n5Z-YV-Oah" customClass="MasterNavigateViewController">
+            <connections>
+                <outlet property="delegate" destination="-2" id="WL2-GE-SMU"/>
+                <outlet property="view" destination="HTJ-TO-ihN" id="eF1-JD-FhS"/>
+            </connections>
+        </customObject>
     </objects>
+    <resources>
+        <image name="NSActionTemplate" width="14" height="14"/>
+        <image name="NSAddTemplate" width="11" height="11"/>
+        <image name="NSRemoveTemplate" width="11" height="11"/>
+    </resources>
 </document>
