--- a/EventLogUtility/SupportingFiles/Nib/MasterView/FileListView.xib
+++ b/EventLogUtility/SupportingFiles/Nib/MasterView/FileListView.xib
@@ -6,14 +6,109 @@
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="FileListViewController">
             <connections>
+                <outlet property="outlineView" destination="HWm-f0-hWJ" id="G6A-gy-eCj"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="Hz6-mo-xeY">
-            <rect key="frame" x="0.0" y="0.0" width="480" height="272"/>
+            <rect key="frame" x="0.0" y="0.0" width="170" height="470"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+            <subviews>
+                <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="16" horizontalPageScroll="10" verticalLineScroll="16" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tvl-DW-Qfo">
+                    <rect key="frame" x="0.0" y="0.0" width="170" height="470"/>
+                    <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="wXf-Z6-D4X">
+                        <rect key="frame" x="0.0" y="0.0" width="170" height="470"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="14" rowSizeStyle="automatic" viewBased="YES" indentationPerLevel="16" outlineTableColumn="EYF-JU-hQq" id="HWm-f0-hWJ">
+                                <rect key="frame" x="0.0" y="0.0" width="170" height="470"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <size key="intercellSpacing" width="3" height="2"/>
+                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
+                                <tableColumns>
+                                    <tableColumn width="167" minWidth="40" maxWidth="1000" id="EYF-JU-hQq">
+                                        <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border">
+                                            <font key="font" metaFont="smallSystem"/>
+                                            <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="headerColor" catalog="System" colorSpace="catalog"/>
+                                        </tableHeaderCell>
+                                        <textFieldCell key="dataCell" controlSize="small" lineBreakMode="truncatingTail" selectable="YES" editable="YES" title="Text Cell" id="Hv8-jP-Lpr">
+                                            <font key="font" metaFont="smallSystem"/>
+                                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                            <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                        </textFieldCell>
+                                        <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
+                                        <prototypeCellViews>
+                                            <tableCellView id="f4O-Qp-HNb">
+                                                <rect key="frame" x="1" y="1" width="167" height="17"/>
+                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <subviews>
+                                                    <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="xhA-JJ-w7d">
+                                                        <rect key="frame" x="0.0" y="0.0" width="150" height="17"/>
+                                                        <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Table View Cell" id="NtT-jO-JQQ">
+                                                            <font key="font" metaFont="smallSystem"/>
+                                                            <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
+                                                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                        </textFieldCell>
+                                                    </textField>
+                                                    <button translatesAutoresizingMaskIntoConstraints="NO" id="o5b-02-t2B">
+                                                        <rect key="frame" x="151" y="2" width="13" height="13"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="13" id="TnI-jK-VtH"/>
+                                                            <constraint firstAttribute="height" constant="13" id="VlV-PF-JXi"/>
+                                                        </constraints>
+                                                        <buttonCell key="cell" type="square" bezelStyle="shadowlessSquare" image="NSStopProgressFreestandingTemplate" imagePosition="only" alignment="center" controlSize="small" imageScaling="proportionallyUpOrDown" inset="2" id="IKn-yo-rht">
+                                                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                                                            <font key="font" metaFont="smallSystem"/>
+                                                        </buttonCell>
+                                                    </button>
+                                                </subviews>
+                                                <constraints>
+                                                    <constraint firstAttribute="bottom" secondItem="o5b-02-t2B" secondAttribute="bottom" constant="2" id="5cm-3F-04S"/>
+                                                    <constraint firstItem="o5b-02-t2B" firstAttribute="top" secondItem="f4O-Qp-HNb" secondAttribute="top" constant="2" id="7VD-ef-s8X"/>
+                                                    <constraint firstItem="xhA-JJ-w7d" firstAttribute="leading" secondItem="f4O-Qp-HNb" secondAttribute="leading" constant="2" id="FS4-pG-eGK"/>
+                                                    <constraint firstAttribute="bottom" secondItem="xhA-JJ-w7d" secondAttribute="bottom" id="NgA-7R-uRl"/>
+                                                    <constraint firstAttribute="trailing" secondItem="o5b-02-t2B" secondAttribute="trailing" constant="3" id="QOx-xA-gec"/>
+                                                    <constraint firstItem="o5b-02-t2B" firstAttribute="leading" secondItem="xhA-JJ-w7d" secondAttribute="trailing" constant="3" id="SFL-xe-onS"/>
+                                                    <constraint firstItem="xhA-JJ-w7d" firstAttribute="top" secondItem="f4O-Qp-HNb" secondAttribute="top" id="zpg-kX-SGW"/>
+                                                </constraints>
+                                                <connections>
+                                                    <outlet property="textField" destination="xhA-JJ-w7d" id="hKS-1I-nJu"/>
+                                                </connections>
+                                            </tableCellView>
+                                        </prototypeCellViews>
+                                    </tableColumn>
+                                </tableColumns>
+                                <connections>
+                                    <outlet property="dataSource" destination="-2" id="shD-Jz-dCe"/>
+                                    <outlet property="delegate" destination="-2" id="Z6D-ty-yAh"/>
+                                </connections>
+                            </outlineView>
+                        </subviews>
+                        <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
+                    </clipView>
+                    <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="Edf-CO-rXq">
+                        <rect key="frame" x="0.0" y="454" width="170" height="16"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </scroller>
+                    <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="iuA-yb-5nA">
+                        <rect key="frame" x="224" y="17" width="15" height="102"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </scroller>
+                </scrollView>
+            </subviews>
+            <constraints>
+                <constraint firstAttribute="bottom" secondItem="tvl-DW-Qfo" secondAttribute="bottom" id="B6T-ex-eJn"/>
+                <constraint firstItem="tvl-DW-Qfo" firstAttribute="leading" secondItem="Hz6-mo-xeY" secondAttribute="leading" id="Kme-my-DCH"/>
+                <constraint firstAttribute="trailing" secondItem="tvl-DW-Qfo" secondAttribute="trailing" id="VeN-cU-M8h"/>
+                <constraint firstItem="tvl-DW-Qfo" firstAttribute="top" secondItem="Hz6-mo-xeY" secondAttribute="top" id="chf-Wp-leY"/>
+            </constraints>
         </customView>
     </objects>
+    <resources>
+        <image name="NSStopProgressFreestandingTemplate" width="14" height="14"/>
+    </resources>
 </document>
