--- a/EventLogUtility/SupportingFiles/Nib/MasterView/FileListView.xib
+++ b/EventLogUtility/SupportingFiles/Nib/MasterView/FileListView.xib
@@ -16,14 +16,14 @@
             <rect key="frame" x="0.0" y="0.0" width="170" height="470"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
-                <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="16" horizontalPageScroll="10" verticalLineScroll="16" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tvl-DW-Qfo">
+                <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="19" horizontalPageScroll="10" verticalLineScroll="19" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tvl-DW-Qfo">
                     <rect key="frame" x="0.0" y="0.0" width="170" height="470"/>
                     <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="wXf-Z6-D4X">
                         <rect key="frame" x="0.0" y="0.0" width="170" height="470"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" rowHeight="14" rowSizeStyle="automatic" viewBased="YES" indentationPerLevel="16" outlineTableColumn="EYF-JU-hQq" id="HWm-f0-hWJ">
-                                <rect key="frame" x="0.0" y="0.0" width="170" height="470"/>
+                            <outlineView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" typeSelect="NO" rowSizeStyle="automatic" viewBased="YES" indentationPerLevel="16" outlineTableColumn="EYF-JU-hQq" id="HWm-f0-hWJ">
+                                <rect key="frame" x="0.0" y="0.0" width="170" height="0.0"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -42,7 +42,7 @@
                                         </textFieldCell>
                                         <tableColumnResizingMask key="resizingMask" resizeWithTable="YES" userResizable="YES"/>
                                         <prototypeCellViews>
-                                            <tableCellView id="f4O-Qp-HNb">
+                                            <tableCellView id="f4O-Qp-HNb" customClass="FileListTabelCellView">
                                                 <rect key="frame" x="1" y="1" width="167" height="17"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                 <subviews>
@@ -76,6 +76,7 @@
                                                     <constraint firstItem="xhA-JJ-w7d" firstAttribute="top" secondItem="f4O-Qp-HNb" secondAttribute="top" id="zpg-kX-SGW"/>
                                                 </constraints>
                                                 <connections>
+                                                    <outlet property="closeButton" destination="o5b-02-t2B" id="Naa-nw-nkL"/>
                                                     <outlet property="textField" destination="xhA-JJ-w7d" id="hKS-1I-nJu"/>
                                                 </connections>
                                             </tableCellView>
