init for master view controller

--- a/EventLogUtility/Supporting Files/Nib/Document/DocumentWindow.xib
+++ b/EventLogUtility/Supporting Files/Nib/Document/DocumentWindow.xib
@@ -84,6 +84,7 @@
         <customObject id="8KU-Hf-FNv" customClass="LMDocumentViewController">
             <connections>
                 <outlet property="fileDisplayController" destination="c09-Cn-zIT" id="pCy-tV-ERL"/>
+                <outlet property="masterController" destination="umg-uC-MAm" id="wMZ-cb-lBY"/>
                 <outlet property="splitView" destination="539-3M-D8t" id="P5k-ek-Y0A"/>
                 <outlet property="view" destination="gIp-Ho-8D9" id="2dI-kU-C4h"/>
             </connections>
@@ -91,6 +92,11 @@
         <customObject id="c09-Cn-zIT" customClass="LMFileDisplayViewController">
             <connections>
                 <outlet property="view" destination="l2y-no-ylF" id="Oes-zU-4Zx"/>
+            </connections>
+        </customObject>
+        <customObject id="umg-uC-MAm" customClass="LMMasterViewController">
+            <connections>
+                <outlet property="view" destination="x4i-g0-Wrx" id="Koi-rP-Nzt"/>
             </connections>
         </customObject>
     </objects>
